--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .background {
-  background-image: url(../assets/background.jpg);
+  background-image: url(./assets/background.jpg);
   background-size: cover;
   width: 100%;
   position: fixed;
